--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,169 @@
-.App {
+:root{
+  --background-color: #fff;
+  --background-light: #fff;
+  --shadow-color: rgba(0,0,0,0.2);
+  --primary-color: rgb(255, 0, 86);
+  --text-color: #0A0A0A;
+  --text-light: #575757;
+  --font-size: 16px;
+  --animation-speed: 1;
+}
+
+.app {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+a{
+  text-decoration: none;
+}
+
+.navbar{
+  height: 55px;
+  box-shadow: 0 3px 6px var(--shadow-color);
+  /* background-color:  #000000; */
+  color: #fff;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-bottom: 1px solid var(--primary-color);
+}
+
+.navbar .logo{
+  font-size: 1.2em;
+  font-weight: bolder;
+  color: var(--primary-color);
+  text-decoration: none;
+  text-shadow: 0 1px 3px var(--shadow-color);
+}
+
+
+.navbar .nav-links a{
+  margin-left: 1em;
+  color: #fff;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  position: relative;
+  font-size: .9em;
+}
+
+.navbar .nav-links a::before{
+  content: '';
+  display: inline-block;
+  height: 3px;
+  width: 100%;
+  background-color: var(--primary-color);
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  transform: scaleX(0);
+  transition: calc(0.5s * 1) ease-in-out;
+}
+
+.navbar .nav-links a:hover::before{
+  transform: scaleX(1);
+}
+
+.active{
+  color: var(--primary-color) !important;
+  font-weight: bolder;
+}
+
+/* .sidebar{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 260px;
+  background-color: var(--background-color);
+  box-shadow: 0 0 0 1000px rgba(0,0,0,0.2),
+              3px 0 5px var(--shadow-color);
+} */
+
+/* POSTS */
+
+.post-component{
+  margin: auto;
+  text-align: center;
+  /* border: 1px solid white; */
+  width: 65%;
+  border-radius: 10px;
+}
+
+.posts{
+  margin: auto;
+  margin-top: 5px;
+  width: 85%;
+  height: 100%;
+  
+}
+
+.post{
+  display: flex;
+  margin: auto;
+  /* border: 1px solid white; */
+
+  border-bottom: 1px solid white;
+  padding: 10px;
+}
+
+.posts img{
+  width: 250px;
+  height: 30vh;
+  border: 1px solid white;
+  padding: 5px;
+}
+
+.posts .post-content{
+  /* height: 30vh; */
+  display: inline-block;
+  align-items: center;
+  /* border: 1px solid white; */
+  margin-left: 5px;
+  flex-direction: column;
+  height: 100%;
+  /* margin-top: 25px; */
+  padding: 10px;
+}
+
+.posts .post-content h2{
+  font-size: 2em;
+  font-weight: 900;
+  margin-top: 10px;
+}
+
+.posts .post-content .post-description{
+  font-size: 1em;
+  margin-top: 10px;
+  width: auto;
+}
+
+.posts .post-content .post-description a{
+  color: red;
+  font-size: .75em;
+  margin-left: 5px;
+}
+
+.posts .post-content .more-info{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: .75em;
+  margin-top: 20px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+/* TOP HEADLINES */
+.country-codes h2{
   color: white;
+  margin-bottom: .5em;
+  margin-top: 10px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.country-codes .codes .country-code{
+  background-color: var(--primary-color);
+  padding: .5em 1em;
+  margin: 0 .5em .5em 0;
+  border-radius: 25px;
 }
