--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 }
 
 body {
+  /* padding-top: 55px; height of the navbar */
   margin: 0;
   font-family: 'Roboto', sans-serif;
   background-color:  #000000;
